Fixed horizontal overflow on mobile menu

--- a/travel_guam/TG-stylesheet.css
+++ b/travel_guam/TG-stylesheet.css
@@ -15,6 +15,8 @@ video {
     height: 100vh;
     object-fit: cover;
     object-position: 75% 50%;
+    cursor: default;
+    overflow-y: scroll;
 }
 /* div.overlay {
     position: fixed;
